fit_predictor/mkp_aco/evaluates/reevo/run1/2025-01-15_16-07-20/problem_iter14_response6.txt_stdout.txt
Traceback (most recent call last):
  File "/home/lars/workspace/COP/reevo_2/problems/mkp_aco/eval.py", line 8, in <module>
    import gpt
  File "/home/lars/workspace/COP/reevo_2/problems/mkp_aco/gpt.py", line 33
    normalized_p penalized_utility = (penalized_utility - np.min(penalized_utility)) / (np.max(penalized_utility) - np.min(penalized_utility))
                 ^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
